Remove invite code requirement
